tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    monitoring.syn.tools/monitoring: 'true'
    name: syn-mon-openshift-ingress
  name: syn-mon-openshift-ingress
