tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/01_networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-from-prometheus-monitoring
  name: allow-from-prometheus-monitoring
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: syn-monitoring
  podSelector: {}
  policyTypes:
    - Ingress
