tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/10_ingress_clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  annotations: {}
  labels:
    name: openshift-ingress-metrics
  name: openshift-ingress-metrics
rules:
  - apiGroups:
      - route.openshift.io
    resources:
      - routers/metrics
    verbs:
      - get
      - list
      - watch
