tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/10_ingress_clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  annotations: {}
  labels:
    name: openshift-ingress-metrics
  name: openshift-ingress-metrics
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: openshift-ingress-metrics
subjects:
  - kind: ServiceAccount
    name: prometheus-monitoring
    namespace: syn-monitoring
