tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/10_serviceMonitor_operator.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: ingress-operator
  name: ingress-operator
  namespace: syn-mon-openshift-ingress
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /etc/prometheus/configmaps/serving-certs-ca-bundle/service-ca.crt
        serverName: metrics.openshift-ingress-operator.svc
  jobLabel: component
  namespaceSelector:
    matchNames:
      - openshift-ingress-operator
  selector:
    matchLabels:
      name: ingress-operator
