tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/10_serviceMonitors.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: ingress-operator
  name: ingress-operator
  namespace: syn-monitoring-openshift4-ingress
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: metrics.openshift-ingress-operator.svc
  jobLabel: name
  namespaceSelector:
    matchNames:
      - openshift-ingress-operator
  selector:
    matchLabels:
      name: ingress-operator
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: ingress-controller-default
  name: ingress-controller-default
  namespace: syn-monitoring-openshift4-ingress
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: router-internal-default.openshift-ingress.svc
  namespaceSelector:
    matchNames:
      - openshift-ingress
  selector:
    matchLabels:
      ingresscontroller.operator.openshift.io/owning-ingresscontroller: default
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: ingress-controller-foo
  name: ingress-controller-foo
  namespace: syn-monitoring-openshift4-ingress
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: router-internal-foo.openshift-ingress.svc
  namespaceSelector:
    matchNames:
      - openshift-ingress
  selector:
    matchLabels:
      ingresscontroller.operator.openshift.io/owning-ingresscontroller: foo
