tests/golden/syn-monitoring/openshift4-ingress/openshift4-ingress/20_monitoring/10_serviceMonitors_ingress.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: ingress-controller-default
  name: ingress-controller-default
  namespace: syn-mon-openshift-ingress
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: router-internal-default.openshift-ingress.svc
  namespaceSelector:
    matchNames:
      - openshift-ingress
  selector:
    matchLabels:
      ingresscontroller.operator.openshift.io/owning-ingresscontroller: default
